--- a/css/style.css
+++ b/css/style.css
@@ -244,20 +244,6 @@ label {
   transform: scale(1.1);
 }
 
-.Button {
-  width: 90px;
-  height: 40px;
-  font-size: 20px;
-  color: rgb(247, 239, 239);
-  background-color: #a531c2;
-  margin-left: 30px;
-  margin-bottom: 20px;
-  border-radius: 10px;
-}
-.Button .Button:hover {
-  color: rgb(247, 239, 239);
-}
-
 .Div-Promo h1, .Div-Promo .Header-Registrate h2, .Header-Registrate .Div-Promo h2, .Div-Promo .Header-Casino h2, .Header-Casino .Div-Promo h2, .Div-Promo3 h1, .Div-Promo3 .Header-Registrate h2, .Header-Registrate .Div-Promo3 h2, .Div-Promo3 .Header-Casino h2, .Header-Casino .Div-Promo3 h2, .Div-Promo2 h1, .Div-Promo2 .Header-Registrate h2, .Header-Registrate .Div-Promo2 h2, .Div-Promo2 .Header-Casino h2, .Header-Casino .Div-Promo2 h2 {
   padding-left: 20px;
   font-size: 30px;
@@ -494,6 +480,20 @@ label {
 }
 #pie .Ultimo .Imagen-Footer, #pie-Deportes .Ultimo .Imagen-Footer {
   width: 50px;
+}
+
+#Button {
+  width: 90px;
+  height: 40px;
+  font-size: 20px;
+  color: rgb(247, 239, 239);
+  background-color: #a531c2;
+  margin-left: 30px;
+  margin-bottom: 20px;
+  border-radius: 10px;
+}
+#Button #Button:hover {
+  color: rgb(247, 239, 239);
 }
 
 /*MediaQueris*/
