--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,10 @@ label {
   font-family: Nunito;
 }
 
+.btn-outline-danger {
+  margin-left: 25px;
+}
+
 .contenedor-Deportes {
   display: flex;
   flex-direction: row;
@@ -387,14 +391,103 @@ label {
   }
 }
 
-.Main-Rulett {
-  background: url("../imagenes/roulette.png");
-  background-repeat: no-repeat;
-  background-position: cover;
-  background-size: cover;
-  height: 100%;
-  padding-bottom: 40px;
-  padding-top: 40px;
+.shop-content {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin-top: 30px;
+  margin-left: 80px;
+  margin-right: 80px;
+}
+
+.card {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  max-width: 300px;
+  margin: auto;
+  margin-bottom: 20px;
+  text-align: center;
+  font-family: Quicksand;
+}
+
+.price {
+  color: #8b919a;
+  font-size: 22px;
+}
+
+.card button {
+  border: none;
+  outline: 0;
+  padding: 12px;
+  color: pink;
+  background-color: rgb(7, 6, 6);
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+}
+
+.card button:hover {
+  opacity: 0.7;
+}
+
+.Logo-Carrito {
+  width: 50px;
+  height: 40px;
+}
+
+.modal-container {
+  width: 80%;
+  margin: 0 10%;
+  max-height: 88vh;
+  color: pink;
+  background-color: rgb(7, 6, 6);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: fixed;
+  overflow: auto;
+  z-index: 9;
+  top: 12vh;
+}
+.modal-container .modal-content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width: 70%;
+  margin: 10px;
+}
+
+.modal-container::-webkit-scrollbar {
+  display: none;
+}
+
+.modal-header {
+  display: flex;
+  justify-content: space-around;
+  background-color: rgb(7, 6, 6);
+  color: rgb(247, 239, 239);
+  width: 100%;
+}
+
+.modal-header-title {
+  justify-self: start;
+}
+
+.modal-header-button {
+  cursor: pointer;
+}
+
+.modal-container > div > img {
+  height: 120px;
+  width: 120px;
+}
+
+.total-content {
+  font-size: 25px;
+  padding: 20px;
+  text-align: center;
+  padding-top: 20px;
 }
 
 /*Grid Area*/
