--- a/scss/style.scss
+++ b/scss/style.scss
@@ -202,6 +202,10 @@
         }
     }
 
+    .btn-outline-danger {
+        margin-left: 25px;
+    }
+
     .contenedor-Deportes {
         display: flex;
         flex-direction: row;
@@ -627,16 +631,101 @@
 
         }
     }
-.Main-Rulett{
-        background: url('../imagenes/roulette.png');
-        background-repeat: no-repeat;
-        background-position: cover;
-        background-size: cover;
-        height: 100%;
-        padding-bottom: 40px;
-        padding-top: 40px;
+//Carrito
+.shop-content {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin-top: 30px;
+    margin-left: 80px;
+    margin-right:80px;
+
+}
+.card{
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    max-width: 300px;
+    margin:auto;
+    margin-bottom: 20px;
+    text-align: center;
+    font-family: $font2;
+
+
+
+    }
+    .price{
+        color: $color2;
+        font-size: 22px;
     }
 
+.card button{
+    border: none;
+    outline: 0;
+    padding: 12px;
+    color: $color6;
+    background-color: $color1;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+    font-size: 18px;
+}
+.card button:hover{
+    opacity: 0.7;
+}
+.Logo-Carrito{
+    width: 50px;
+    height: 40px;
+}
+.modal-container {
+    width: 80%;
+    margin: 0 10%;
+    max-height: 88vh;
+    color:$color6;
+    background-color: $color1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: fixed;
+    overflow: auto;
+    z-index: 9;
+    top: 12vh;
+
+    .modal-content{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        width: 70%;
+        margin: 10px;
+    }
+
+}
+.modal-container::-webkit-scrollbar{
+    display: none;
+}
+
+.modal-header{
+    display: flex;
+    justify-content: space-around;
+    background-color: $color1;
+    color: $color5;
+    width: 100%;
+}
+.modal-header-title{
+    justify-self: start;
+}
+.modal-header-button{
+    cursor: pointer;
+}
+.modal-container > div > img{
+    height: 120px;
+    width: 120px;
+}
+.total-content{
+    font-size: 25px;
+    padding: 20px;
+    text-align: center;
+    padding-top: 20px;
+}
     /*Grid Area*/
     /*INDEX*/
     #Grilla {
@@ -780,6 +869,7 @@
             color: $color5;
         }
     }
+
     /*MediaQueris*/
     /*Mobile First*/
     @media only screen and (min-width: 320px) and (max-width: 767px) {
