--- a/css/style.css
+++ b/css/style.css
@@ -490,6 +490,22 @@ label {
   padding-top: 20px;
 }
 
+.delete-product {
+  cursor: pointer;
+}
+
+.cantidad-carrito {
+  background-color: red;
+  color: rgb(247, 239, 239);
+  border-radius: 50%;
+  font-size: 12px;
+  padding: 4px;
+  top: 37px;
+  right: 14px;
+  position: absolute;
+  display: none;
+}
+
 /*Grid Area*/
 /*INDEX*/
 #Grilla {
