--- a/scss/style.scss
+++ b/scss/style.scss
@@ -726,6 +726,21 @@
     text-align: center;
     padding-top: 20px;
 }
+
+.delete-product{
+    cursor: pointer;
+}
+.cantidad-carrito{
+    background-color: red;
+    color: $color5;
+    border-radius: 50%;
+    font-size: 12px;
+    padding: 4px;
+    top: 37px;
+    right: 14px;
+    position: absolute;
+    display: none;
+}
     /*Grid Area*/
     /*INDEX*/
     #Grilla {
