--- a/scss/style.scss
+++ b/scss/style.scss
@@ -731,7 +731,7 @@
     cursor: pointer;
 }
 .cantidad-carrito{
-    background-color: red;
+    background-color: $color3;
     color: $color5;
     border-radius: 50%;
     font-size: 12px;
@@ -740,6 +740,12 @@
     right: 14px;
     position: absolute;
     display: none;
+}
+.sumar{
+    cursor: pointer;
+}
+.restar{
+    cursor: pointer;
 }
     /*Grid Area*/
     /*INDEX*/
