--- a/scss/style.scss
+++ b/scss/style.scss
@@ -747,6 +747,11 @@
 .restar{
     cursor: pointer;
 }
+
+.price{
+    color: #a531c2;
+    font-family: $font2;
+}
     /*Grid Area*/
     /*INDEX*/
     #Grilla {
